# War3Server

./: .gitignore  CMakeLists.txt  ConfigureChecks.cmake  README.md
cmake/Modules/: CheckMkdirArgs.cmake  DefineInstallationPaths.cmake  cmake_purge.cmake  cmake_uninstall.cmake
conf/: bnetd.conf.in  command_groups.conf.in
lib/fmt/: format.h
lib/zlib/x64/debug/lib/: zlibd.lib
lib/zlib/x64/lib/: zlib.lib
lib/zlib/x64/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/zlib/x64/share/zlib/: vcpkg.spdx.json  vcpkg_abi_info.txt
lib/zlib/x86/debug/lib/: zlibd.lib
lib/zlib/x86/lib/: zlib.lib
lib/zlib/x86/share/zlib/: vcpkg.spdx.json  vcpkg_abi_info.txt
src/bnetd/: CMakeLists.txt  account.cpp  account.h  account_wrap.cpp  account_wrap.h  adbanner.cpp  adbanner.h  alias_command.cpp  anongame.cpp  anongame.h  anongame_gameresult.h  anongame_infos.cpp  anongame_maplists.h  anongame_wol.cpp  attrgroup.cpp  attrgroup.h  attrlayer.cpp  autoupdate.cpp  channel.cpp  character.cpp  character.h  clan.cpp  clan.h  cmdline.cpp  command.cpp  connection.cpp  connection.h  file.cpp  friends.cpp  game.cpp  game.h  game_conv.cpp  game_conv.h  handle_anongame.cpp  handle_anongame.h  handle_apireg.cpp  handle_bnet.cpp  handle_d2cs.cpp  handle_d2cs.h  handle_irc.cpp  (+43 more)
src/bniutils/: bni2tga.cpp  bnibuild.cpp  bniextract.cpp  fileio.cpp  tga.cpp
src/bnpass/: bnpass.cpp  sha1hash.cpp
src/bntrackd/: bntrackd.cpp
src/client/: bnbot.cpp  bnchat.cpp  bnftp.cpp  bnstat.cpp  client.cpp  client_connect.cpp
src/common/: addr.cpp  addr.h  anongame_protocol.h  bigint.cpp  bn_type.cpp  bnet_protocol.h  bnetsrp3.cpp  conf.cpp  d2char_file.h  d2game_protocol.h  eventlog.cpp  eventlog.h  fdwatch.cpp  fdwatch_poll.cpp  fdwatch_select.cpp  field_sizes.h  file_protocol.h  gui_printf.h  init_protocol.h  network.cpp  packet.cpp  packet.h  proginfo.cpp  pugixml.cpp  pugixml.h  setup_before.h  udp_protocol.h  util.cpp  wol_gameres_protocol.h  xalloc.cpp  xstring.cpp  xstring.h
src/compat/: access.h  gethostname.h  gettimeofday.cpp  mkdir.h  mmap.cpp  pdir.cpp  pdir.h  pgetopt.cpp  psock.cpp  psock.h  read.h  recv.h  rename.h  send.h  socket.h  strcasecmp.h  strerror.cpp
src/d2cs/: CMakeLists.txt  bnetd.cpp  cmdline.cpp  connection.cpp  connection.h  d2charlist.cpp  d2ladder.cpp  d2ladder.h  game.cpp  game.h  gamequeue.cpp  handle_d2cs.cpp  handle_signal.cpp  main.cpp  server.cpp  setup.h
src/d2dbs/: charlock.cpp  cmdline.cpp  cmdline.h  d2ladder.cpp  d2ladder.h  dbsdupecheck.cpp  dbserver.cpp  dbserver.h  dbspacket.cpp  handle_signal.cpp  handle_signal.h  main.cpp
src/json/: json.hpp
src/win32/: console_output.cpp  console_output.h  d2cs_resource.rc  d2cs_winmain.cpp  d2dbs_resource.rc  d2dbs_winmain.cpp  resource.rc  service.cpp  service.h  windump.cpp  windump.h  winmain.cpp
